# aoc2023

./: README.md
data/: 10.small.txt
src/: 1.py  10.py  11.py  2.py  3.py  4.py  5.py  5_part2.py  6.py  7.py  7_part2.py  8.py  9.py  pyproject.toml
