[tool.poetry]
name = "trader"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
lxml = "^4.9.3"
numpy = "^1.24.1"
pandas = "^1.5.3"
polars = {version=">=0.13.52", extras=["pyarrow"]}
yfinance = ">=0.1.63"
tqdm = "^4.62.3"
ta-lib = "^0.4.28"
lightgbm = "^4.1.0"
scikit-learn = "^1.3.2"
catboost = ">=1.0.0"
shapely = ">1.8.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.6"
black = "^22.10.0"
pytest = "^7.1.3"
pandas-stubs = "^1.5.2.230105"
types-python-dateutil = "^2.8.19.11"
pylint = "^2.17.2"

[tool.mypy]
# Enable pydantic mypy plugin.
plugins = ["pydantic.mypy"]

namespace_packages = true
show_error_codes = true
strict = true
disallow_any_unimported = true
disallow_any_explicit = true
warn_unreachable = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"